src/main/java/com/example/resy/data/error/ReservationLockException.java
package com.example.resy.data.error;

public class ReservationLockException extends RuntimeException {
    public ReservationLockException(String message) {
        super(message);
    }
}